# smptest

./: CMakeLists.txt  README.md  main.c
FreeRTOSConfig/: FreeRTOSConfig.h
inc/: main.h
